update nginx config, service, and readme

--- a/nginx-dev.conf
+++ b/nginx-dev.conf
@@ -9,10 +9,10 @@ upstream blog_app {
 # Server block for the blog
 server {
     listen 80;
-    server_name ariefbayu.try;
+    server_name localhost;
 
     # Root directory for static files
-    root /mnt/c/MyDriver/WorkDocuments/Personal/ariefbayu-dev-blog-generator/personal-blog-generator/html-outputs;
+    root /path/to/your/project/html-outputs;
     index index.html;
 
     # Serve static files with clean URLs
@@ -28,12 +28,12 @@ server {
 
     # Proxy admin requests to Go application
     location /admin {
-        # Basic authentication for admin area
-        auth_basic "Blog Admin Area";
-        auth_basic_user_file /mnt/c/MyDriver/WorkDocuments/Personal/ariefbayu-dev-blog-generator/personal-blog-generator/.htpasswd;
+        # Basic authentication for admin area (optional for dev)
+        # auth_basic "Blog Admin Area";
+        # auth_basic_user_file /path/to/.htpasswd;
 
         # Proxy settings
-        proxy_pass http://blog_app;
+        proxy_pass http://blog_app\;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -47,7 +47,7 @@ server {
 
     # API proxy (if needed for direct API access)
     location /api {
-        proxy_pass http://blog_app;
+        proxy_pass http://blog_app\;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
